nodeapp-deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: nodeapp-deployment
  labels:
    app : nodeapp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      project: nodeapp
  template:
    metadata:
      labels:
        project: nodeapp
    spec:
      containers:
        - name : nodeapp-js
          image: nodeapp:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
