nodeapp-deployment-svc.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: nodeapp-deployment
  labels:
    app : nodeapp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      project: nodeapp
  template:
    metadata:
      labels:
        project: nodeapp
    spec:
      containers:
        - name : nodeapp-js
          image: nodeapp:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
  labels:
    owner: Max
spec:
  selector:
    project: nodeapp   
  ports:
    - name      : http
      port      : 3000
