nodeapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: host.info
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nodeapp-service
              port:
                number: 3000
